syntax="proto3";

package  Protos.RoomRegistration;

message RoomRegistrationRequestMsgDef
{
    string room_name = 1;
}

message RoomRegistrationResponseMsgDef
{
    int32 room_id = 1;
}




